finished CRUD for client
